pending update